# pynojector

./: .gitignore  Makefile  README.md  elliptic_complex_function.txt  pynojector.py  pyproject.toml  swirl.py  test.py
pynojector/: __init__.py  swirl.py
pynojector/trainscanner_plugins/: conformal.py  square_pano.py  swirl.py  swirl_pano.py
