[tool.poetry]
name = "pynojector"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
scipy = "^1.15.3"
tqdm = "^4.67.1"
opencv-python-headless = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pynojector"

[tool.poetry.plugins."trainscanner.converters"]
swirl = "pynojector.swirl:get_parser"