[tool.poetry]
name = "pynojector"
version = "0.4.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
scipy = "^1.15.3"
tqdm = "^4.67.1"
opencv-python-headless = "^4.11.0.86"
tiffeditor = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pynojector"

[tool.poetry.plugins."trainscanner.converters"]
swirl = "pynojector.trainscanner_plugins.swirl:get_parser"
conformal = "pynojector.trainscanner_plugins.conformal:get_parser"
# square_pano = "pynojector.trainscanner_plugins.square_pano:get_parser"